--- a/packages/imandrax-codegen/pyproject.toml
+++ b/packages/imandrax-codegen/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "py-gen"
+name = "imandrax-codegen-py"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
