--- a/packages/imandrax-api-models/pyproject.toml
+++ b/packages/imandrax-api-models/pyproject.toml
@@ -17,10 +17,15 @@ dependencies = [
 requires = ["uv_build>=0.8.22,<0.9.0"]
 build-backend = "uv_build"
 
+
+[tool.uv.sources]
+imandrax-api = { path = "../../../imandrax-api/src/py" }
+
 [dependency-groups]
 dev = [
     "ipykernel>=7.1.0",
     "pytest>=9.0.1",
+    "pyyaml>=6.0.3",
 ]
 
 [tool.ruff.lint]
