--- a/packages/imandrax-api-models/pyproject.toml
+++ b/packages/imandrax-api-models/pyproject.toml
@@ -23,6 +23,7 @@ imandrax-api = { path = "../../../imandrax-api/src/py" }
 
 [dependency-groups]
 dev = [
+    "inline-snapshot[dirty-equals]>=0.31.1",
     "ipykernel>=7.1.0",
     "pytest>=9.0.1",
     "pyyaml>=6.0.3",
