flag for control EOF trailing new line

--- a/packages/iml-query/pyproject.toml
+++ b/packages/iml-query/pyproject.toml
@@ -104,3 +104,6 @@ reportUnnecessaryIsInstance = false
 reportUnnecessaryTypeIgnoreComment = true
 reportUnusedImport = "none"
 reportUnusedExpression = false
+
+[tool.inline-snapshot]
+format-command="ruff check --fix-only --stdin-filename {filename} | ruff format --stdin-filename {filename}"
