--- a/packages/iml-query/pyproject.toml
+++ b/packages/iml-query/pyproject.toml
@@ -107,3 +107,15 @@ reportUnusedExpression = false
 
 [tool.inline-snapshot]
 format-command="ruff check --fix-only --stdin-filename {filename} | ruff format --stdin-filename {filename}"
+
+[[tool.uv.index]]
+name = "pypi"
+url = "https://pypi.org/simple/"
+publish-url = "https://upload.pypi.org/legacy/"
+explicit = true
+
+[[tool.uv.index]]
+name = "testpypi"
+url = "https://test.pypi.org/simple/"
+publish-url = "https://test.pypi.org/legacy/"
+explicit = true
