--- a/packages/imandrax-api-models/pyproject.toml
+++ b/packages/imandrax-api-models/pyproject.toml
@@ -1,11 +1,12 @@
 [project]
 name = "imandrax-api-models"
+version = "1.0.0"
 description = "Add your description here"
 readme = "README.md"
 authors = [
     { name = "hongyu", email = "hongyu@imandra.ai" }
 ]
-requires-python = ">=3.13"
+requires-python = ">=3.12"
 dependencies = [
     "devtools>=0.12.2",
     "imandrax-api[async]>=0.17.3.1",
@@ -83,7 +84,7 @@ unresolved-import = "ignore"
 [tool.pyright]
 venvPath = "."
 venv = ".venv"
-pythonVersion = "3.13"
+pythonVersion = "3.12"
 typeCheckingMode = "strict"
 reportMissingTypeStubs = false
 reportUnnecessaryIsInstance = false
