--- a/packages/imandrax-tools/pyproject.toml
+++ b/packages/imandrax-tools/pyproject.toml
@@ -15,3 +15,6 @@ dependencies = [
 [build-system]
 requires = ["uv_build>=0.8.22,<0.9.0"]
 build-backend = "uv_build"
+
+[tool.ruff.format]
+quote-style = "single"
