imandrax-tools: publish task

--- a/packages/imandrax-tools/Makefile
+++ b/packages/imandrax-tools/Makefile
@@ -16,3 +16,19 @@ pre-release-test:
 	make build
 	make test-wheel
 	make test-source-dist
+
+.PHONY: publish-testpypi
+publish-testpypi: pre-release-test
+	uv publish \
+	--publish-url https://test.pypi.org/legacy/ \
+	-u __token__ \
+	-p $$(gcloud secrets versions access --project imandra-dev --secret pypi-test-imandrax-api-api-token latest) \
+	./dist/imandrax_tools-*
+
+.PHONY: publish-pypi
+publish-pypi: pre-release-test
+	uv publish \
+	--publish-url https://upload.pypi.org/legacy/ \
+	-u __token__ \
+	-p $$(gcloud secrets versions access --project imandra-dev --secret pypi-imandrax-api-api-token latest) \
+	./dist/imandrax_tools-*
