--- a/packages/imandrax-api-models/pyproject.toml
+++ b/packages/imandrax-api-models/pyproject.toml
@@ -13,6 +13,11 @@ dependencies = [
     "pydantic>=2.12.4",
 ]
 
+[project.optional-dependencies]
+cli = [
+    "typer>=0.20.0",
+]
+
 [build-system]
 requires = ["uv_build>=0.8.22,<0.9.0"]
 build-backend = "uv_build"
