--- a/packages/imandrax-api-models/pyproject.toml
+++ b/packages/imandrax-api-models/pyproject.toml
@@ -34,6 +34,7 @@ build-backend = "uv_build"
 dev = [
     "inline-snapshot[dirty-equals]>=0.31.1",
     "ipykernel>=7.1.0",
+    "pdbpp>=0.11.7",
     "pytest>=9.0.1",
     "pyyaml>=6.0.3",
 ]
