extended client optional deps

--- a/packages/imandrax-api-models/pyproject.toml
+++ b/packages/imandrax-api-models/pyproject.toml
@@ -14,9 +14,8 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-cli = [
+client = [
     "iml-query>=0.4.2",
-    "typer>=0.20.0",
 ]
 
 [project.scripts]
