tests: parse mode

--- a/packages/imandrax-codegen/test/model/dune
+++ b/packages/imandrax-codegen/test/model/dune
@@ -14,7 +14,5 @@
   fmt)
  (inline_tests
   (deps
-   (source_tree data)))
+   (source_tree ../data)))
  (preprocess (pps ppx_expect ppx_deriving.show ppx_deriving_yojson)))
-
-(data_only_dirs data)
