scripts as pyproject members

--- a/packages/imandrax-codegen/pyproject.toml
+++ b/packages/imandrax-codegen/pyproject.toml
@@ -39,6 +39,11 @@ members = [
     "scripts",
 ]
 
+[tool.uv.workspace]
+members = [
+    "scripts",
+]
+
 [tool.setuptools]
 package-dir = {"" = "python"}
 
