test(data): inline record

--- a/packages/imandrax-codegen/scripts/gen_decl_art/get_decl_inputs.yaml
+++ b/packages/imandrax-codegen/scripts/gen_decl_art/get_decl_inputs.yaml
@@ -43,13 +43,10 @@
 - name: variant_with_payload
   iml: |
     type shape =
-      | Circle of int
-      | Rectangle of int * int
-
-    let area = fun s ->
-      match s with
-      | Circle r -> r * r
-      | Rectangle (w, h) -> w * h
+    | Point
+    | Circle of int
+    | Rectangle of int * int
+    | Triangle of {a: int; b: int; c: int}
   req_kwargs:
     names:
       - shape
