--- a/packages/imandrax-codegen/scripts/pyproject.toml
+++ b/packages/imandrax-codegen/scripts/pyproject.toml
@@ -7,8 +7,19 @@ authors = [
     { name = "hongyu", email = "hongyu@imandra.ai" }
 ]
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "imandrax-codegen-py",
+]
 
 [build-system]
 requires = ["uv_build>=0.8.22,<0.9.0"]
 build-backend = "uv_build"
+
+[tool.uv.sources]
+imandrax-codegen-py = { workspace = true }
+
+[dependency-groups]
+dev = [
+    "dotenv>=0.9.9",
+    "ipykernel>=7.0.1",
+]
