--- a/packages/imandrax-codegen/scripts/gen_decl_art/get_decl_inputs.yaml
+++ b/packages/imandrax-codegen/scripts/gen_decl_art/get_decl_inputs.yaml
@@ -51,15 +51,16 @@
     names:
       - shape
 
-- name: variant_with_multiple_payloads
+- name: variant_poly
   iml: |
-    type shape =
-      | Circle of float
-      | Rectangle of float * float
-      | Triangle of { base: float; height: float } ;;
+    type 'a shape_poly =
+    | Point
+    | Circle of 'a
+    | Rectangle of 'a * 'a
+    | Triangle of {a: 'a; b: 'a; c: 'a}
   req_kwargs:
     names:
-      - shape
+      - shape_poly
 
 - name: variant_recursive
   iml: |
@@ -69,15 +70,6 @@
   req_kwargs:
     names:
       - tree
-
-- name: variant_polymorphic
-  iml: |
-    type 'a expr =
-      | Int of int
-      | Add of 'a expr * 'a expr
-  req_kwargs:
-    names:
-      - expr
 
 - name: GADT_monomorphic
   iml: |
