--- a/packages/imandrax-codegen/scripts/gen_decl_art/result/variant_two.yaml
+++ b/packages/imandrax-codegen/scripts/gen_decl_art/result/variant_two.yaml
@@ -1,18 +1,15 @@
-name: variant_with_payload
+name: variant_two
 iml: |
-  type shape =
-  | Point
-  | Circle of int
+  type rect =
   | Rectangle of int * int
-  | Triangle of {a: int; b: int; c: int}
+  | Square of int
+
+  type shape =
+  | Circle of int
+  | Polygon of rect
 req_kwargs:
   names:
   - shape
-expected_python_code: "@dataclass\nclass Point:\n    pass\n\n@dataclass\nclass Circle:\n\
-  \    arg0: int  # anonymous field\n\n@dataclass\nclass Rectangle:\n    arg0: int\n\
-  \    arg1: int\n\n@dataclass\nclass Triangle:\n    a: int\n    b: int\n    c: int\n\
-  \n# Note: we keep the original name (lower case)\nshape = Point | Circle | Rectangle\
-  \ | Triangle\n"
 get_decls_res:
   decls:
   - name: shape
