--- a/packages/imandrax-codegen/scripts/pyproject.toml
+++ b/packages/imandrax-codegen/scripts/pyproject.toml
@@ -23,3 +23,89 @@ dev = [
     "dotenv>=0.9.9",
     "ipykernel>=7.0.1",
 ]
+
+[tool.pyright]
+venvPath = "."
+venv = ".venv"
+include = ["python"]
+pythonVersion = "3.13"
+typeCheckingMode = "strict"
+reportMissingTypeStubs = false
+reportUnnecessaryIsInstance = false
+reportUnnecessaryTypeIgnoreComment = true
+reportUnusedImport = "none"
+reportUnusedExpression = false
+
+
+[tool.ruff]
+line-length = 88
+fix = true
+preview = true
+show-fixes = true
+src = ["src"]
+exclude = [
+  "*.ipynb",
+  "vendor/",
+  ".venv/",
+]
+
+[tool.ruff.format]
+docstring-code-format = true
+
+[tool.ruff.lint]
+select = [
+  "ARG",
+  "B",   # flake8-bugbear
+  "B9",
+  "E",   # pycodestyle errors
+  "EXE",
+  "F",   # pyflakes
+  "I",   # isort
+  "ISC",
+  "N",   # pep8-naming
+  "UP",  # pyupgrade
+  "RUF", # ruff-specific rules
+  "C4",  # flake8-comprehensions
+  "PGH",
+  "PTH", # flake8-use-pathlib
+  "PYI",
+  "PT",
+  "SIM", # flake8-simplify
+  # "D"
+  "PLW0127",
+  "FURB101",
+  "FURB103",
+  "PLW1510",
+]
+ignore = [
+  "SIM103",  # needless-bool
+  "SIM108", # if-else-block-instead-of-if-exp
+  "N801",   # Class name should use CapWords
+  "PTH123", # `open()` should be replaced by `Path.open()`
+  "C417",   # Unnecessary `map()` usage (rewrite using a generator expression)
+  "D100", # ignore missing docstring in module
+  "D101", # ignore missing docstring in public class
+  "D102", # ignore missing docstring in public method
+  "D103", # ignore missing docstring in public function
+  "D104", # ignore missing docstring in public package
+  "D105", # ignore missing docstring in magic methods
+  "D106", # ignore missing docstring in public nested class
+  "D107", # ignore missing docstring in __init__ methods
+  "D203",
+  "D212",
+  # These are all enforced by, or incompatible with, the ruff formatter:
+  "E203",
+  "E501",
+  "W291",
+  "W293",
+  # It's often necessary to compare types instead of using isinstance()
+  "E721",
+  "RUF005",
+  # Let mypy/pyright complain about blanket type ignores or implicit optional
+  "PGH004",
+  "RUF013",
+  "E266",
+  "RUF036",
+]
+task-tags = ["HACK"]
+pycodestyle.ignore-overlong-task-comments = true
