--- a/packages/imandrax-codegen/test/e2e/dune
+++ b/packages/imandrax-codegen/test/e2e/dune
@@ -1,7 +1,6 @@
 (cram
  (deps
-  %{bin:py-gen-parse-model}
-  %{bin:py-gen-parse-fun-decomp}
+  %{bin:py-gen-parse}
   (source_tree ../data)
   ../../pyproject.toml
   ../../uv.lock
