--- a/packages/imandrax-codegen/Makefile
+++ b/packages/imandrax-codegen/Makefile
@@ -1,65 +1,63 @@
-.PHONY: help gen-artifacts copy-artifacts gen-tests test clean
+.PHONY: help
+help:  ## Show this help message
+	@grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | \
+		awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-20s\033[0m %s\n", $$1, $$2}'
 
-help:
-	@echo "Available targets:"
-	@echo "  gen-artifacts    - Generate all test artifacts (model, fun_decomp, decl)"
-	@echo "  copy-artifacts   - Copy generated artifacts to test/data/"
-	@echo "  gen-tests        - Regenerate cram test files from artifacts"
-	@echo "  update-all       - Run all steps: generate, copy, and regenerate tests"
-	@echo "  test             - Run all tests"
-	@echo "  clean            - Clean generated artifacts"
+gen-artifacts: gen-model-art gen-fun-decomp-art gen-decl-art  ## Generate all artifacts
 
-# Generate all artifacts
-gen-artifacts: gen-model-art gen-fun-decomp-art gen-decl-art
-
+.PHONY: gen-model-art
 gen-model-art:
 	@echo "Generating model artifacts..."
 	uv run scripts/gen_model_art
 
+.PHONY: gen-fun-decomp-art
 gen-fun-decomp-art:
 	@echo "Generating fun_decomp artifacts..."
 	uv run scripts/gen_fun_decomp_art
 
+.PHONY: gen-decl-art
 gen-decl-art:
 	@echo "Generating decl artifacts..."
 	uv run scripts/gen_decl_art
 
-# Copy artifacts to test data directories
-copy-artifacts: copy-model copy-fun-decomp copy-decl
+copy-artifacts: copy-model copy-fun-decomp copy-decl  ## Copy artifacts to test data directories
 
+.PHONY: copy-model
 copy-model:
 	@echo "Copying model artifacts to test/data/model/..."
 	rsync -av --delete scripts/gen_model_art/result/ test/data/model/
 
+.PHONY: copy-fun-decomp
 copy-fun-decomp:
 	@echo "Copying fun_decomp artifacts to test/data/fun_decomp/..."
 	rsync -av --delete scripts/gen_fun_decomp_art/result/ test/data/fun_decomp/
 
+.PHONY: copy-decl
 copy-decl:
 	@echo "Copying decl artifacts to test/data/decl/..."
 	rsync -av --delete scripts/gen_decl_art/result/ test/data/decl/
 
-# Regenerate cram test files
-gen-tests: gen-test-model gen-test-fun-decomp
+gen-cram-tests: gen-cram-test-model gen-cram-test-fun-decomp  ## Generate cram test files
 
-gen-test-model:
+.PHONY: gen-cram-test-model
+gen-cram-test-model:
 	@echo "Regenerating test_parse_model.t..."
 	bash test/e2e/cram_test_gen__model.sh > test/e2e/test_parse_model.t
 
-gen-test-fun-decomp:
+.PHONY: gen-cram-test-fun-decomp
+gen-cram-test-fun-decomp:
 	@echo "Regenerating test_parse_fun_decomp.t..."
 	bash test/e2e/cram_test_gen__fun_decomp.sh > test/e2e/test_parse_fun_decomp.t
 
-# Run all steps in sequence
-update-all: gen-artifacts copy-artifacts gen-tests
+update-all:  ## Update all artifacts and regenerate cram test files
+	make gen-artifacts
+	make copy-artifacts
+	make gen-cram-tests
 	@echo "All artifacts generated, copied, and tests regenerated!"
 	@echo "Run 'dune test' to execute the tests and 'dune promote' to accept new outputs."
 
-# Run tests
-test:
-	dune test
-
 # Clean generated artifacts
+.PHONY: clean
 clean:
 	rm -rf scripts/gen_model_art/result/*
 	rm -rf scripts/gen_fun_decomp_art/result/*
