--- a/packages/imandrax-api-models/pyproject.toml
+++ b/packages/imandrax-api-models/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "imandrax-api-models"
-version = "1.1.1"
+version = "18.0.0"
 description = "Add your description here"
 readme = "README.md"
 authors = [
@@ -27,8 +27,7 @@ build-backend = "uv_build"
 
 
 [tool.uv.sources]
-imandrax-api = { path = "../../../imandrax-api/src/py" }
-
+# imandrax-api = { path = "../../../imandrax-api/src/py" }
 
 [dependency-groups]
 dev = [
