chore: pin dev imandrax-api

--- a/packages/imandrax-codegen/pyproject.toml
+++ b/packages/imandrax-codegen/pyproject.toml
@@ -32,7 +32,7 @@ package = true
 
 [tool.uv.sources]
 # imandrax-api-models = { path = "../imandrax-api-models", editable = true }
-# imandrax-api = { path = "../../../imandrax-api/src/py" }
+imandrax-api = { path = "../../../imandrax-api/src/py" }
 # imandrax-api = { path = "../../vendor/imandrax-api/src/py" }
 
 [tool.uv.workspace]
@@ -67,8 +67,9 @@ typeCheckingMode = "strict"
 reportMissingTypeStubs = false
 reportUnnecessaryIsInstance = false
 reportUnnecessaryTypeIgnoreComment = true
-reportUnusedImport = "none"
+reportUnusedImport = false
 reportUnusedExpression = false
+
 
 [tool.ruff]
 line-length = 88
