--- a/packages/imandrax-codegen/pyproject.toml
+++ b/packages/imandrax-codegen/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "imandrax-codegen-py"
+name = "imandrax-codegen"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
@@ -16,10 +16,11 @@ dependencies = [
     "pyyaml>=6.0.3",
     "rich>=14.2.0",
     "ruff>=0.14.3",
+    "typer>=0.21.0",
 ]
 
 [project.scripts]
-py-gen = "py_gen.__main__:main"
+imandrax-codegen = "py_gen.__main__:app"
 
 [dependency-groups]
 dev = [
