test: add test for None model

--- a/packages/imandrax-codegen/scripts/gen_model_art/gen_model_inputs.yaml
+++ b/packages/imandrax-codegen/scripts/gen_model_art/gen_model_inputs.yaml
@@ -70,6 +70,14 @@
         if w = Some 2 then true else false
   instance_src_kwargs:
     src: v
+- name: int option none
+  category: primitive
+  iml: |-
+    let v =
+      fun w ->
+        if w = None then true else false
+  instance_src_kwargs:
+    src: v
 - name: record
   category: primitive
   iml: |-
