--- a/packages/imandrax-codegen/pyproject.toml
+++ b/packages/imandrax-codegen/pyproject.toml
@@ -47,6 +47,13 @@ package-dir = {"" = "python"}
 [tool.setuptools.packages.find]
 where = ["python"]
 
+[tool.setuptools.package-data]
+# By default, Python packages only include .py files. setuptools.package-data tells
+# setuptools to include additional non-Python files when building the package (wheels,
+# sdist).
+
+py_gen = ["art_parse.exe"]
+
 
 [tool.ty]
 environment.python = "./.venv"
