py-deps(dev): add inline-snapshot to

--- a/packages/imandrax-codegen/pyproject.toml
+++ b/packages/imandrax-codegen/pyproject.toml
@@ -25,6 +25,7 @@ imandrax-codegen = "py_gen.__main__:app"
 [dependency-groups]
 dev = [
     "imandrax-api-models>=18.0.0",
+    "inline-snapshot>=0.31.1",
     "ipykernel>=7.0.1",
 ]
 
