--- a/packages/imandrax-api-models/pyproject.toml
+++ b/packages/imandrax-api-models/pyproject.toml
@@ -31,6 +31,7 @@ build-backend = "uv_build"
 
 [dependency-groups]
 dev = [
+    "dotenv>=0.9.9",
     "inline-snapshot[dirty-equals]>=0.31.1",
     "ipykernel>=7.1.0",
     "pdbpp>=0.11.7",
