ci: add imandrax-codegen to release choices

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,7 @@ on:
         options:
           - packages/imandrax-api-models
           - packages/iml-query
+          - packages/imandrax-codegen
           - packages/imandrax-tools
 jobs:
   build:
